--- a/styles.css
+++ b/styles.css
@@ -80,16 +80,40 @@ body {
     word-wrap: break-word;
   }
 
-  .boogeyman-header {
-    color: black;
-    font-size: 16px;
-    font-family: 'Helvetica Neue', sans-serif;
-    font-weight: 700;
-    word-wrap: break-word;
-  }
-  
+.country {
+  stroke: transparent;
+  opacity: 0.8;
+}
 
-  /* Add styling for countries without boogeyman information in the dropdown */
+.country-with-boogeyman {
+  fill: blue;
+}
+
+.selected-country {
+  opacity: 1;
+  stroke: black;
+}
+
+.country-hover {
+  opacity: 1;
+  stroke: black;
+}
+
+
+
+
+
+
+.boogeyman-header {
+  color: black;
+  font-size: 16px;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-weight: 700;
+  word-wrap: break-word;
+}
+
+
+/* Add styling for countries without boogeyman information in the dropdown */
 #countryDropdown option.no-boogeyman {
-  font-style: italic;
+font-style: italic;
 }
