--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,16 @@ body {
 }
 
 
+.tooltip {
+  position: absolute;
+  text-align: center;
+  padding: 8px;
+  background: lightgrey;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none;
+}
+
 
 
 
