--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 
 .main-container {
     width: 1280px;
-    height: 832px;
+    height: 900px;
     padding-top: 59px;
     padding-bottom: 44px;
     padding-left: 69px; 
@@ -20,7 +20,7 @@ body {
  }
 
  .map-container {
-    width:720px; 
+    width:500px; 
     padding-top: 12px; 
     padding-bottom: 10px; 
     padding-left: 23px; 
@@ -32,9 +32,8 @@ body {
 }
 
 #mapContainer {
-    width: 100%;
-    height: 100%;
-   
+  width: 100%;
+  height: 100%;
 }
 
 .highlighted {
@@ -44,14 +43,13 @@ body {
 }
 
 .boogeyman-card {
-  width: 397px; 
-  height: 729px; 
+  margin-top: 60px;
+  width: 400px; 
+  height: 1000px;
   position: relative; 
   border-radius: 9.80px; 
   border: 0.98px #E2E2E8 solid; 
   flex-direction: column; 
-  justify-content: flex-start; 
-  align-items: flex-start; 
   display: flex;
 }
 
@@ -64,13 +62,15 @@ body {
   }
   
   .boogeyman-image {
-    width: 300px;
-    height: 300px;
+    width: 300px; 
+    height: 300px; 
     box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.25);
+    background-size: cover; 
+    background-position: center;
   }
   
   .boogeyman-characteristics {
-    width: 299px;
+    width: 300px;
     color: black;
     font-size: 16px;
     font-family: 'Helvetica Neue', sans-serif;
@@ -79,7 +79,7 @@ body {
   }
   
   .boogeman-description {
-    width: 299px;
+    width: 300px;
     color: black;
     font-size: 16px;
     font-family: 'Helvetica Neue', sans-serif;
@@ -116,10 +116,6 @@ body {
   border-radius: 8px;
   pointer-events: none;
 }
-
-
-
-
 
 .boogeyman-header {
   color: black;
