--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,12 @@ body {
 .main-container {
     width: 1280px;
     height: 900px;
-    padding-top: 59px;
-    padding-bottom: 44px;
-    padding-left: 69px; 
-    padding-right: 49px; 
+    padding-top: 80px;
+    padding-bottom: 80px;
+    padding-left: 60px; 
+    padding-right: 60px; 
     background: white; 
-    justify-content: flex-end; 
-    align-items: flex-end; 
+    flex-direction: row;
     gap: 43px; 
     display: flex;
 
@@ -43,13 +42,14 @@ body {
 }
 
 .boogeyman-card {
-  margin-top: 60px;
+
   width: 400px; 
   height: 1000px;
   position: relative; 
   border-radius: 9.80px; 
   border: 0.98px #E2E2E8 solid; 
   flex-direction: column; 
+  justify-content: flex-start;
   display: flex;
 }
 
@@ -62,11 +62,11 @@ body {
   }
   
   .boogeyman-image {
-    width: 300px; 
-    height: 300px; 
+    width: 300px; /* Set width to 300px */
+    height: 300px; /* Set height to 300px to maintain the aspect ratio */
     box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.25);
-    background-size: cover; 
-    background-position: center;
+    background-size: cover; /* This ensures the image covers the full area of the div */
+    background-position: center; /* Centers the image within the div */
   }
   
   .boogeyman-characteristics {
